# tms_1

./: .gitignore  classtools.py  for.py  hw_10_1.py  hw_4.py  hw_6.py  hw_8.py  hw_9.py  hw_script.py  makedb.py  oop.py  oopfor.py  person-composite.py  person.py  property.py  pyproject.toml  task_11_main.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py  task_9.py  test.py  testing.py  updatedb.py  weather.py
