[tool.poetry]
name = "tms_1"
version = "0.1.0"
description = ""
authors = ["Vladislav.H <vkhrabrov94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pytest = "^7.1.1"
arrow = "^1.2.2"
timeout = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
